2001-08-13  Max Horn <max@quendi.de>
	* audio/Audio.cc: make use of exceptions
	* audio/midi_drivers/mac_midi.cc: dynamic buffer resizing, enhanced pitch
	  bend support, some fixes
	* gumps/File_gump.cc: fixed Gump_text::paint() to match other gumps
	* gumps/Newfile_gump.cc: changed to not restore background in destructor
	* bggame.*: more code cleanup; added possibility to skip parts of the intro
	  some other changes
	* exceptions.h: added quit_exception and file_exception (base class
	  for all file related exceptions)
	* game.*: changed wait_delay to treat Return/Enter differently
	  (used by the intro to skip parts of it)
	* gamedat.cc, gamewin.*, readnpcs.cc: added red-plasma animation during game loading
	* palette.cc: fixed fade_in/fade_out
	* tqueue.cc: changed to use proper way to remove first element from a std::list

2001-08-13  Jeff Freedman  <jsf@usf-cf-x86-linux-1>

	* Lots:  Moved Monster_info to its own files in the shapes directory. 
	The ptrs. to these are now stored in Shape_info.

2001-08-12  Jeff Freedman  <jeff@amy.nerble.net>

	* usecode/intrinsics.cc: Roll_to_win() intrinsic added.
	Flash_mouse() improved (I think).

2001-08-11  Jeff Freedman  <jeff@amy.nerble.net>

	* objs/chunks.cc (Map_chunk): Fixed yet-another world-wrap crash.

	* effects.cc,intrinsics.cc:  Added intrinsic npc_sprite_effect()
	for BG.

	* objs/egg.cc: Put back Egg_object::remove_this.  It's needed.
	* combat.cc:  Try to avoid striking someone on a different level.

2001-08-12  Max Horn <max@quendi.de>
	* audio/midi_drivers/mac_midi.*: fixed NOTE OFF matching; fixed
	  stuffing of Extended Note Events; fixed tempo change; most importantly,
	  fixed usage of REST events (those are *not* accumulated by QTMA hence we have
	  to do it manually). 99% finished, need to tidy it up for release.
	* files/utils.*: added to_uppercase() variant
	* conf/Configuration.* added value() accesor for booleans; cleand up code a bit